[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scripts/JoinGamePopup.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.27451, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="Container"]
margin_right = 320.0
margin_bottom = 360.0
rect_min_size = Vector2( 320, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CreateGameButton" type="Button" parent="Container/MenuContainer"]
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create Game"

[node name="JoinGameButton" type="Button" parent="Container/MenuContainer"]
margin_top = 180.0
margin_right = 320.0
margin_bottom = 360.0
size_flags_vertical = 3
text = "Join Game"

[node name="ImageContainer" type="CenterContainer" parent="Container"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 320, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinGamePopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -72.0
margin_right = 128.0
margin_bottom = 72.0
rect_min_size = Vector2( 256, 144 )
window_title = "Join Lobby"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="JoinGamePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyCodeLabel" type="Label" parent="JoinGamePopup/VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
text = "LOBBY CODE"

[node name="LobbyCode" type="LineEdit" parent="JoinGamePopup/VBoxContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="JoinGamePopup/VBoxContainer"]
margin_top = 46.0
margin_right = 236.0
margin_bottom = 60.0
text = "NAME"

[node name="Name" type="LineEdit" parent="JoinGamePopup/VBoxContainer"]
margin_top = 64.0
margin_right = 236.0
margin_bottom = 88.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="JoinGamePopup/VBoxContainer"]
margin_top = 92.0
margin_right = 236.0
margin_bottom = 112.0

[node name="EnterButton" type="Button" parent="JoinGamePopup/VBoxContainer/CenterContainer"]
margin_left = 92.0
margin_right = 143.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 2
text = "ENTER"
[connection signal="pressed" from="Container/MenuContainer/CreateGameButton" to="." method="_on_CreateGameButton_pressed"]
[connection signal="pressed" from="Container/MenuContainer/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="JoinGamePopup/VBoxContainer/CenterContainer/EnterButton" to="JoinGamePopup" method="_on_EnterButton_pressed"]
